--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 
   <body>
     <h1>Exceptional</h1>
-    <h2>Reality</h2>
+    <h2>Reality Group</h2>
+
+    <img src="images/intro-pic.jpg" alt="a beautiful living room" title="Welcome to Exceptional Realty">
 
     <p>Lorem ipsum dolor sit amet, <br> consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
