--- a/market-report.html
+++ b/market-report.html
@@ -24,16 +24,16 @@
           <td>$1.2 mil</td>
         </tr>
         <tr>
-          <td>2346 Fairview Ln.</td>
-          <td>Brooklyn</td>
+          <td>974 Clapton St.</td>
+          <td>Qweens</td>
           <td>New York</td>
-          <td>$1.3 mil</td>
+          <td>$998 k</td>
         </tr>
         <tr>
-          <td>2347 Fairview Ln.</td>
-          <td>Brooklyn</td>
+          <td>14A Belmont Way</td>
+          <td>Bronx</td>
           <td>New York</td>
-          <td>$1.4 mil</td>
+          <td>$874 k</td>
         </tr>
       </table>
 
