--- a/real-estate-listings.html
+++ b/real-estate-listings.html
@@ -3,10 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <title>Exceptional Realty Group - Luxury Homes - Listings</title>
-    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/8.0.0/normalize.css">
-    <link rel="stylesheet" type="text/css" href="css/style.css">
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.min.js"></script>
-  </head>
+  <link rel="stylesheet" href="http://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.0/normalize.min.css">
+  <link rel="stylesheet" href="css/style.css">
+  <script src="http://cdnjs.cloudflare.com/ajax/libs/modernizr/2.7.1/modernizr.min.js"></script>
+</head>
 <body>
   <header>
     <div id="logo">
@@ -39,7 +39,7 @@
   <section>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rerum, molestias, quaerat in commodi autem itaque officia laboriosam fugiat perferendis et assumenda cum aliquid. Officia, officiis ullam deleniti est illum dignissimos!</p>
   </section>
-
+  
   <section>
     <h3>Property Archive</h3>
     <h4>2014</h4>
@@ -54,7 +54,7 @@
         </ul>
       </li>
     </ul>
-  </section>
+  <section>
 
   <section>
     <h3>Popular Listings</h3>
@@ -89,7 +89,7 @@
           <a href="#" target="_blank">Professional Moving Crew</a>
         </p>
       </div>
-
+      
       <div>
         <h3>Follow</h3>
         <p>
